--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section1>
             <h2>About Me</h2>
-            <p>Hi, I'm Jayesh ! I am learning a web development course from acciojob. And I love to learn new things related the web development.</p>
+            <p>Hi, I'm Sumit ! I am learning a web development course from acciojob. And I love to learn new things related the web development.</p>
         </section1>
 
         <section2>
@@ -36,9 +36,9 @@
 
         <section3>
             <h2>Testimonials</h2>
-            <blockquote>"Jayesh did an amazing job designing my website. I couldn't be happier with the results!"</blockquote>
+            <blockquote>"Sumit did an amazing job designing my website. I couldn't be happier with the results!"</blockquote>
             <blockquote>- Aman Gupta, CEO</blockquote>
-            <blockquote>"Working with Jayesh was a great experience. He is a true professional."</blockquote>
+            <blockquote>"Working with Sumit was a great experience. He is a true professional."</blockquote>
             <blockquote>- David Warner, Manager</blockquote>
         </section3>
 
@@ -89,6 +89,6 @@
         </section4>
     </main>
 </body>
-<footer>&copy;2023 Jayesh Sharma</footer>
+<footer>&copy;2023 Sumit Rajpurohit</footer>
 
 </html>
